tests/codegen/fail/000-union-no-match.hyg
type t = union {
    Some: int;
    None: unit
};

// constructor
let x: t = Some{42};

match x with {
    None{_} -> println("None")
}
